[package]
name = "nonogram"
version = "0.1.0"
authors = ["Harrison McCullough <mccullough.harrison@gmail.com>"]
edition = "2018"

[features]
default = ["interactive"]
interactive = ["cursive"]
parser = ["nom"]

[dependencies]
itertools = "0.8"

# Optional
cursive = { version = "0.11", optional = true }
nom = { version = "4.2", optional = true }
